# scotland-yard

./: README.md  scotland-yard.cabal  stack.yaml
app/: Main.hs
examples/: 20101215.txt  eric-and-i.txt  second-live-game.txt
src/: FloydWarshall.hs  GameData.hs  GameState.hs  TheBoard.hs  Types.hs
test/: GameStateSpec.hs
