name:                scotland-yard
version:             0.1.0.0
synopsis:            An AI for the Scotland Yard board game.
description:         Please see README.md
homepage:            https://github.com/mmachenry/scotland-yard#readme
license:             MIT
license-file:        LICENSE
author:              Mike MacHenry
maintainer:          mike.machenry@gmail.com
copyright:           2017 Mike MacHenry
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , FloydWarshall
                     , GameData
                     , GameState
                     , TheBoard
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , game-tree
                     , multiset
  default-language:    Haskell2010

executable scotland-yard-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , game-tree
                     , scotland-yard
  default-language:    Haskell2010

test-suite scotland-yard-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scotland-yard
                     , containers
                     , hspec
                     , multiset
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mmachenry/scotland-yard
